# argonaut

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  bench-history.csv  cyrb.toml  cyrius.cyml  cyrius.toml
.github/workflows/: ci.yml  release.yml
benches/: argonaut_bench.rs  history.csv
docs/: benchmarks-rust-baseline.md
docs/adrs/: 000-template.md  001-language-choice.md  002-safe-command-abstraction.md  003-library-plus-binary-architecture.md  004-edge-boot-security-model.md  005-health-check-no-external-deps.md  006-pid1-binary-separation.md  007-feature-gated-ecosystem-deps.md  009-service-type-dispatch.md  (+4 more)
lib/: chain.cyr  entry.cyr  error.cyr  export.cyr  hasher.cyr  json.cyr  libro.cyr  query.cyr  retention.cyr  sakshi.cyr  syscalls.cyr  verify.cyr
qemu/: boot-test.sh  build-initramfs.sh  pid1-harness-test.sh
rust-old/: deny.toml
scripts/: aarch64-pi-smoke.sh  aarch64-sweep.sh  bench-history.sh  version.sh
src/: api.rs  audit.cyr  audit.rs  audit_ext.cyr  bench_main.cyr  boot.cyr  boot.rs  compat.cyr  edge_boot.cyr  edge_boot.rs  health.cyr  health.rs  init.cyr  lib.rs  main.cyr  notify.cyr  notify.rs  pid1_harness.cyr  process.rs  process_mgmt.cyr  resolver.cyr  runlevels.rs  security.cyr  security.rs  services.cyr  services.rs  systemd.cyr  systemd.rs  test_advanced.cyr  test_api.cyr  test_audit.cyr  test_display.cyr  test_header.cyr  test_init.cyr  test_lifecycle.cyr  test_main.cyr  test_modules.cyr  test_serde.cyr  test_types.cyr  tests.rs  (+4 more)
supply-chain/: config.toml
tests/: test.sh  test_header.cyr
(+72 files in other folders)
