[package]
name = "argonaut"
version = "0.90.0"
edition = "2024"
rust-version = "1.89"
license = "GPL-3.0-only"
description = "Argonaut — init system and service manager for AGNOS"
homepage = "https://github.com/MacCracken/argonaut"
repository = "https://github.com/MacCracken/argonaut"
readme = "README.md"
keywords = ["init", "service", "boot", "manager"]
categories = ["os"]
exclude = [".claude/", ".github/", "docs/", "scripts/"]

[dependencies]
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
nix = { version = "0.31", features = ["signal", "process", "socket", "uio"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"

[dev-dependencies]
criterion = { version = "0.8", features = ["html_reports"] }
tempfile = "3"

[[bench]]
name = "argonaut_bench"
harness = false
